--- a/client/src/Pages/UserProfile/userProfile.css
+++ b/client/src/Pages/UserProfile/userProfile.css
@@ -1,10 +1,10 @@
 .gradient-custom-2 {
   /* fallback for old browsers */
-  background: #fbc2eb;
+  background: #ee3ebc;
   
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1));
+  background: -webkit-linear-gradient(to right, rgba(251, 194, 235, 1), rgb(116, 238, 244));
   
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1))
+  background: linear-gradient(to right, rgb(243, 124, 209), rgb(83, 193, 244))
 }
