--- a/client/src/components/SideBar/sidebar.module.css
+++ b/client/src/components/SideBar/sidebar.module.css
@@ -2,3 +2,28 @@
     min-height: 100vh;
     max-height: 100vh;
 }
+
+.sidebar {
+    box-shadow: 0px 0px 36px 15px rgba(0, 0, 0, 0.09);
+    border-radius: 10px;
+}
+
+.brand-icon {
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.brand-icon:hover {
+    opacity: 0.7;
+}
+
+.links {
+    transition: all 0.5s ease-out;
+    opacity: 1;
+}
+
+.links:hover {
+    opacity: 0;
+    width: 0;
+    visibility: hidden;
+}
