--- a/client/src/Pages/SearchResult/SearchResult.css
+++ b/client/src/Pages/SearchResult/SearchResult.css
@@ -33,9 +33,9 @@
 }
 
 .result-list {
-  list-style-type: none;
+  list-style-type: unset;
   padding: 0;
-}
+} 
 
 .result-list li {
   margin-bottom: 10px;
